// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dsh plugin tools (v1): registration > parameter schemas are stable (model-facing contract snapshot) > pptfast_render parameters 1`] = `
{
  "properties": {
    "ir": {
      "description": "The deck IR JSON object (version 4): theme, optional narrative/seed, and a slides array. Get the schema and workflow from the pptfast skill (\`pptfast schema\`).",
      "type": "object",
    },
    "out_dir": {
      "description": "Output directory. Default: the session workspace directory. A relative path resolves against the workspace.",
      "type": "string",
    },
    "seed": {
      "description": "Layout-selection seed for revision stability (writes ir.seed). Reuse one seed across revisions of the same deck.",
      "type": "integer",
    },
    "theme": {
      "description": "Theme id override (replaces ir.theme.id) — run pptfast_themes for the list.",
      "type": "string",
    },
  },
  "required": [
    "ir",
  ],
  "type": "object",
}
`;

exports[`dsh plugin tools (v1): registration > parameter schemas are stable (model-facing contract snapshot) > pptfast_themes parameters 1`] = `
{
  "properties": {},
  "type": "object",
}
`;

exports[`dsh plugin tools (v1): registration > parameter schemas are stable (model-facing contract snapshot) > pptfast_validate parameters 1`] = `
{
  "properties": {
    "ir": {
      "description": "The deck IR JSON object (version 4): theme, optional narrative/seed, and a slides array. Get the schema and workflow from the pptfast skill (\`pptfast schema\`).",
      "type": "object",
    },
  },
  "required": [
    "ir",
  ],
  "type": "object",
}
`;
